<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="Book_In">Book_In</string>
    <string name="action_settings">Settings</string>
    <string name="app_name">CAR BOOK IN SYSTEM</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="back_Panel_description">Image Description</string>
    <string name="back_panel">Back Panel</string>
    <string name="back_panel_image">Back Panel Image</string>
    <string name="back_to_menu">Back To Menu</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="btn_to_back_panel">Proceed</string>
    <string name="btn_to_right_panel">Proceed</string>
    <string name="cell_phone_number">Cell Phone Number</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="client_details">Client Details</string>
    <string name="complete">Complete</string>
    <string name="create_new_record">Create New Record</string>
    <string name="date_booked_in">Date booked in</string>
    <string name="email">Email</string>
    <string name="front_panel__description">Image Description</string>
    <string name="home_tel_number">Home Tel Number</string>
    <string name="image_description">Image Description</string>
    <string name="left_panel">Left Panel</string>
    <string name="left_panel_image">Left Panel Image</string>
    <string name="make">Make</string>
    <string name="message">Message</string>
    <string name="mileage">Mileage</string>
    <string name="model">Model</string>
    <string name="phonenumber">PhoneNumber</string>
    <string name="proceed">Proceed</string>
    <string name="recordFault">Record Fault</string>
    <string name="registration_number">Registration Number</string>
    <string name="returning_date">Returning Date</string>
    <string name="right_Panel_Description">Image Description</string>
    <string name="search_by_registration_number">Search By Reference Number</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="service_date">Service Date</string>
    <string name="surname">Surname</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="under_development">Front Panel</string>
    <string name="vehicle_details">Vehicle Details</string>
    <string name="vin_number">Vin Number</string>
    <string name="work_tel_number">Work Tel Number</string>
    <string name="year">Year</string>
    <string name="full_name">Full Name</string>
</resources>
