<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/other_view"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1.0">

    <TextView android:textAppearance="@color/colorPrimary"
        android:textSize="22sp"
        android:textColor="#ffffff"
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:text="@string/back_panel"
        android:textAlignment="center" />

    <LinearLayout android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1.0"
        android:layout_below="@+id/textView"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">

        <ImageView android:id="@+id/BackPanelImage"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:foreground="0x1080037"
            android:src="0x1080037"
            android:scaleType="fitCenter"
            android:adjustViewBounds="false"
            android:layout_weight="0.9"
            android:foregroundGravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill"
            android:contentDescription="@string/back_panel_image" />

        <EditText android:textColorHint="#fc0808"
            android:id="@+id/txtBackPanelDescription"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:hint="@string/back_Panel_description"
            android:ems="10"
            android:layout_weight="0.09"
            android:inputType="text"/>
        <Button android:enabled="false"
            android:textColor="@color/abc_primary_text_disable_only_material_light"
            android:textColorHighlight="#0efc1e"
            android:textColorHint="@color/abc_primary_text_material_light"
            android:id="@+id/btnToLeftPanel"
            android:background="0x1060000"
            android:longClickable="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_to_right_panel"
            android:layout_weight="0.04"
            android:textAlignment="center"
            style="@style/Widget.AppCompat.Button.Colored"/>
    </LinearLayout>
</RelativeLayout>
