<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/other_view"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1.0">

    <TextView android:textAppearance="@style/Widget.AppCompat.Button.Colored"
        android:textSize="22sp"
        android:textColor="#ffffff"
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:text="@string/left_panel"
        android:layout_weight="0.07"
        android:textAlignment="center" />

    <LinearLayout android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1.0"
        android:layout_below="@+id/textView"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">

        <ImageView android:id="@+id/leftPanelImage"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:foreground="0x1080037"
            android:src="0x1080037"
            android:scaleType="fitCenter"
            android:adjustViewBounds="false"
            android:layout_weight="0.9"
            android:foregroundGravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill" android:contentDescription="@string/left_panel_image" />

        <EditText android:textColorHint="#fc0808"
            android:id="@+id/txtLeftPanelDescription"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:hint="@string/image_description"
            android:ems="10" android:layout_weight="0.09"
            android:inputType="text|textCapCharacters|textCapWords|textCapSentences|textAutoCorrect|textAutoComplete|textMultiLine|textImeMultiLine|textNoSuggestions|textUri|textEmailAddress|textEmailSubject|textShortMessage|textLongMessage|textPersonName|textPostalAddress|textPassword|textVisiblePassword|textWebEditText|textFilter|textPhonetic|textWebEmailAddress|textWebPassword|phone" android:textIsSelectable="false" android:textAlignment="textStart" />

        <Button android:enabled="false"
            android:textColor="@color/abc_primary_text_disable_only_material_light"
            android:textColorHighlight="#0efc1e"
            android:textColorHint="@color/abc_primary_text_material_light"
            android:id="@+id/btnComplete"
            android:background="0x1060000"
            android:longClickable="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/complete"
            android:layout_weight="0.04"
            android:textAlignment="center" style="@style/Widget.AppCompat.Button" />
    </LinearLayout>
</RelativeLayout>
